--- a/src/haml/index.haml
+++ b/src/haml/index.haml
@@ -16,7 +16,7 @@
 
   %body
     %header.bar.bar-nav
-      %h1.title Ratchet Phonegap Starter App
+      %h1.title Ratchet PhoneGap Starter App
 
     #deviceready.event-listener
       .bar.bar-standard.bar-header-secondary
