--- a/src/haml/index.haml
+++ b/src/haml/index.haml
@@ -18,10 +18,13 @@
     %header.bar.bar-nav
       %h1.title Ratchet PhoneGap Starter App
 
-    #deviceready.event-listener
-      .bar.bar-standard.bar-header-secondary
-        %button.btn.btn-block.listening Connecting to Device
-        %button.btn.btn-block.btn-positive.received Device is Ready
+    .content
+      .content-padded
+        #deviceready.event-listener
+          %button.btn.btn-block.listening Connecting to Device
+          %button.btn.btn-block.btn-positive.received Device is Ready
+
+        %a.btn.btn-block.btn-primary{ href: 'two.html', data: { transition: 'slide-in' } } Go to Page Two
 
     %script{ src: 'phonegap.js',                         type: 'text/javascript' }
     %script{ src: 'js/ratchet/modals.js',                type: 'text/javascript' }
@@ -31,5 +34,6 @@
     %script{ src: 'js/ratchet/sliders.js',               type: 'text/javascript' }
     %script{ src: 'js/ratchet/toggles.js',               type: 'text/javascript' }
     %script{ src: 'js/index.js',                         type: 'text/javascript' }
-    :javascript
-      app.initialize();
+
+    :coffeescript
+      app.initialize()
