--- a/src/spec/spec.haml
+++ b/src/spec/spec.haml
@@ -21,32 +21,21 @@
     %script{src: 'spec/helper.js', type: 'text/javascript'}
     %script{src: 'spec/index.js', type: 'text/javascript'}
 
-    :javascript
-      (function() {
-          var jasmineEnv = jasmine.getEnv();
-          jasmineEnv.updateInterval = 1000;
+    :coffeescript
+      execJasmine = ->
+        jasmineEnv.execute()
 
-          var htmlReporter = new jasmine.HtmlReporter();
+      jasmineEnv = jasmine.getEnv()
+      jasmineEnv.updateInterval = 1000
+      htmlReporter = new jasmine.HtmlReporter()
+      jasmineEnv.addReporter htmlReporter
+      jasmineEnv.specFilter = (spec) ->
+        htmlReporter.specFilter spec
 
-          jasmineEnv.addReporter(htmlReporter);
-
-          jasmineEnv.specFilter = function(spec) {
-              return htmlReporter.specFilter(spec);
-          };
-
-          var currentWindowOnload = window.onload;
-
-          window.onload = function() {
-              if (currentWindowOnload) {
-                  currentWindowOnload();
-              }
-              execJasmine();
-          };
-
-          function execJasmine() {
-              jasmineEnv.execute();
-          }
-      })();
+      currentWindowOnload = window.onload
+      window.onload = ->
+        currentWindowOnload()  if currentWindowOnload
+        execJasmine()
 
   %body
     #stage{ style: 'display:none;' }
